# rageval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rageval/: __init__.py
src/rageval/core/: __init__.py  config.py  models.py
src/rageval/generation/: __init__.py
src/rageval/metrics/: __init__.py  generation.py  retrieval.py  rouge.py
src/rageval/pipeline/: __init__.py  runner.py  storage.py
src/rageval/retrieval/: __init__.py  evaluator.py
tests/: test_e2e_customer_scenarios.py  test_generation_metrics.py  test_models.py  test_pipeline.py  test_retrieval_metrics.py  test_rouge.py  test_storage.py
